# ccalc

./: .gitignore  DOC  Makefile.am  NEWS.md  README  README.md  TODO  USAGE  configure.ac
src/: Makefile  Makefile.am  ccalc.1  ccalc_tester.c  define.h  error.c  error.h  evaluate.c  evaluate.h  main.c  options.c  options.h  test_ccalc.c  value.c  value.h
